# fruitful-lab

./: .gitignore  Makefile  repo-tree.txt
backend/: Makefile  config.py  db.py  main.py  manage_users.py  models.py  pyproject.toml  railway.json  schemas.py  security.py  utils.py
backend/migrations/: env.py
backend/migrations/_legacy_versions/: 3f2a1c9e4b6d_add_groups_json_to_users.py  c1a2b3c4d5e6_monthly_stats_add_account_name_uploaded_at.py
backend/migrations/versions/: 0f1db0936876_initial_schema.py  b105958cfa97_add_is_admin_to_users.py
backend/routers/: admin_pinterest_stats.py  auth.py  stats.py
backend/scripts/: simulate_pinterest_fit.py
backend/scripts/aws/: s3_policy_test.py
backend/scripts/db/: manage_pinterest_stats.py
backend/tests/: test_auth_api.py  test_auth_protection.py  test_config.py  test_database_schema.py  test_health_endpoints.py  test_pinterest_fit_scenarios.py  test_pinterest_fit_spec.py  test_pinterest_stats_api.py  test_security.py
backend/tests/pinterest_fit/: __init__.py  engine.py  fixtures.py  models.py
docs/: AUTH.md  AUTH_IMPLEMENTATION_GAP_REPORT-2025-12-21.md  AUTH_SYSTEM_REPORT-2025-12-22.md  AWS_ACCESS_GUIDE.md  EXPRERIMENTS.md  REPO_GROUNDING_PACK.md  SCROLLBAR_STYLING_AUDIT.md  SYSTEM_IMPLEMENTATION_AUDIT-2025-12-21.md  SYSTEM_IMPLEMENTATION_AUDIT-2026-01-10.md  db_migrations_guide.md  pinterest-potential-implementation-summary.md  pinterest-potential-parity.md  pinterest-potential-results-investigation.md  pinterest-potential-sprint1-compute-audit.md  pinterest-potential-steps-investigation.md  pinterest-potential-unused-components-audit.md  pinterest-potential-v1-sprint-plan.md  tech_hub_v1_implementation_snapshot.md  tech_site_front_page_spec.md  user_management.md  user_management_script.md
frontend/: README.md  jest.config.cjs  (+5 more)
(+200 files in other folders)
