[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Fruitful Lab with SQLAlchemy and Postgres"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.15",
    "email-validator>=2.3.0",
    "fastapi>=0.123.5",
    "langchain-openai>=1.1.6",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

# You can actually drop this whole block if you're happy to use uv-style groups only.
[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "alembic>=1.17.2",
    "httpx>=0.28.1",
]
